# ml-deploy-doubleit

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  codecov.yml  docker-compose.yml  infra_setup.sh  pyproject.toml
.code_quality/: mypy.ini  ruff.toml
.github/workflows/: ci.yml
docker/: .dockerignore
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
iac/: main.tf  outputs.tf  variables.tf
models/: doubleit_model.pt  inference_example.py  rebuild_model.py
src/backend/: app.py
src/frontend/: app.py
src/model/: load_model.py  schema.py
tests/: test_backend.py  test_mock.py  test_model.py
